reverse URL -> URI pour gérer l'encoding des urls
git-svn-id: http://scm.etat-ge.ch:21080/cti.composant/ct_referentiels-ofs/trunk@33430 222efd1c-12ae-ee84-b859-f398d68c9be8